# GraphQL-Requests-Lib

./: README.md  main.cpp
docs/: hierarchy.gql
include/graphQLOL/: error_handler.h  graphQLOL.h  query_builder.h  request_manager.h  response_parser.h  websocket_manager.h
src/: CMakeLists.txt  error_handler.cpp  query_builder.cpp  request_manager.cpp  response_parser.cpp  websocket_manager.cpp
tests/: CMakeLists.txt
